fix: push up pagination to show up on mobile even with bottom browser bar

--- a/src/App.css
+++ b/src/App.css
@@ -8,3 +8,8 @@
 .swiper-pagination-bullet{
     background-color:rgb(0,194,203) !important;
 }
+@media (max-width: 1400px) {
+    .swiper-pagination{
+        padding-bottom:15vh;
+    }
+}
